# gitops2-healthcare-intelligence-git-commit

./: .editorconfig  .env.example  .gitignore  ALL_GAPS_CLOSED.md  ARTICLE_VALIDATION.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY.txt  CODEQL_V4_UPGRADE_SUCCESS.md  CODE_CLEANUP_PLAN.md  CODE_REVIEW.md  COMPLETION_SUMMARY.md  COMPLIANCE.md  CONSOLIDATION_SUCCESS.md  CONTRIBUTING.md  COPILOT_INTEGRATION_COMPLETE.md  DEMO.sh  DEMO_EVALUATION.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  FINAL_QUALITY_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_SUMMARY.md  GAPS_CLOSURE_REPORT.md  GITHUB_ACTIONS_UPGRADE.md  GITOPS_2_0_DEMO.sh  IMPLEMENTATION_STATUS.md  LICENSE  LIVE_DEMO.sh  LIVE_DEMO_STATUS.md  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_COMPLETE.md  PHASE_2_COMPLETE.md  PRODUCTION_READINESS_REVIEW.md  PROGRESS_UPDATE.md  PROJECT_COMPLETE.md  PROJECT_PROGRESS_REPORT.md  (+44 more)
.ai/: manifest-new.yml  manifest.yml
.copilot/: COPILOT_WORKFLOW_DEMO.md  VS_CODE_INTEGRATION.md  commit-message-prompt.txt  healthcare-commit-guidelines.yml
.github/: CI_CD_AUTOMATION_GUIDE.md  CODEOWNERS  copilot-instructions.md  dependabot.yml  gitops-copilot-instructions.md
.gitops/: commit_message.txt  commit_metadata.json  config.json
.husky/: commit-msg  pre-commit  prepare-commit-msg
config/: git-forensics-config.yaml  gitops-health.yml  production.yaml
docs/: AI_TOOLS_GUIDE.md  AI_TOOLS_REFERENCE.md  API_KEY_SECURITY.md  ARTICLE_COMPLIANCE_REVIEW.md  AZURE_COSMOS_DB.md  COMPLIANCE_GUIDE.md  COPILOT_CONFIGURATION.md  COSMOS_DB.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  ENGINEERING_GUIDE.md  ENGINEERING_GUIDE.new.md  EXECUTIVE_OVERVIEW.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  INCIDENT_FORENSICS_DEMO.md  QUICK_REFERENCE.md  README.md  README.md.backup  SCENARIO_END_TO_END.md  SECRET_ROTATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md
executive/: AI_NATIVE_TRANSFORMATION_STATUS.md  EXECUTIVE_SUMMARY.md  PRESENTATION_OUTLINE.md  TRANSFORMATION_COMPLETE.md
infra/: azure-cosmos-db.bicep
legacy/: README.md
observability/: README.md
policies/: enterprise-commit.rego  enterprise-commit_test.rego
scripts/: .gitignore  canary_rollout_sim.sh  cleanup-demo.sh  common.sh  demo.sh  deploy_cosmos_db.sh  fix-go-deps.sh  flow-1-ai-commit.sh  flow-2-policy-gate-real.sh  flow-2-policy-gate.sh  flow-3-bisect-real.sh  flow-3-bisect.sh  generate-coverage.sh  install-pre-commit-hook.sh  (+8 more)
(+238 files in other folders)
