[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitops-health"
version = "2.0.0"
description = "AI-Native Healthcare Engineering Intelligence Platform - Unified CLI for compliance, risk scoring, and intelligent forensics"
authors = [
    { name = "GitOps Health Team", email = "team@gitopshealth.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["gitops", "healthcare", "compliance", "HIPAA", "FDA", "SOX", "AI", "devops", "risk-scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/Oluseyi-Kofoworola/gitops2-healthcare-intelligence-git-commit"
Documentation = "https://github.com/Oluseyi-Kofoworola/gitops2-healthcare-intelligence-git-commit/blob/main/docs"
Issues = "https://github.com/Oluseyi-Kofoworola/gitops2-healthcare-intelligence-git-commit/issues"
Repository = "https://github.com/Oluseyi-Kofoworola/gitops2-healthcare-intelligence-git-commit"

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
# Main CLI entry points (Phase 1: AI-native transformation)
git-policy-validate = "src.git_policy.cli:main"
git-forensics-report = "src.git_forensics.cli:main"
ai-readiness-scan = "src.ai_readiness.cli:main"

# Legacy entry points (maintained for backward compatibility)
gitops-health = "gitops_health.cli:main"
risk-scorer = "git_intel.risk_scorer:main_entry"
compliance-framework = "ai_compliance_framework:main_entry"
intelligent-bisect = "intelligent_bisect:main_entry"

[tool.setuptools]
packages = ["git_intel", "src"]

[tool.setuptools.package-data]
git_intel = ["*.py"]
